[build-system]
requires = ["setuptools", "dataclasses"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpointer"
version = "0.1.1"
description = "A simple checkpointing library for Python"
authors = [
    { name = "Jonas Eppelt", email = "jonas.eppelt@kit.edu"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.etp.kit.edu:jeppelt/checkpointer.git"
